# stacktrace

src/: Makefile.am  stacktrace.c  stacktrace.h
tests/: Makefile.am  libtest_dlopen_exc.cpp  test_dlopen_exc.cpp
